fixed issue with logo on mobile

--- a/src/scss/_mobile.scss
+++ b/src/scss/_mobile.scss
@@ -35,7 +35,7 @@ $homepage: '.homepage';
       }
 
       .brand {
-        margin: ($unit + 2) 0 0 0;
+        margin: 6px 0 0 0;
 
         a {
           margin: 0;
